--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,58 @@
+*{
+  margin:0px;
+  padding: 0px;
+}
 body {
-  margin: 20px;
-  padding: 0;
+  margin: 0;
   font-family: sans-serif;
-  background: #eee;
+  background: #222;
+  color: #ddd;
+  text-align: center;
+}
+.app{
+  width: 960px;
+  margin: 0 auto;
+}
+h1{
+  color: #ffff57;
+  font-size: 4em;
+  letter-spacing: 2px;
+}
+nav{
+  background: none !important;
+  box-shadow: none;
+}
+button{
+  margin: 0 10px;
+  background: transparent;
+  border: 3px solid #ccc;
+  border-radius: 20px;
+  padding: 10px;
+  color: #ccc;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+button:focus,
+button:hover{
+  color: #fff;
+  border-color: #fff;
+  background-color: transparent;
+}
+.content{
+  text-align: left;
+}
+
+.card{
+  padding: 8px 16px;
+  background: #1b1b1b;
+  margin: 16px 0;
+  border-radius: 20px;
+}
+.card p{
+  margin: 6px 0;
+  color: #999;
+}
+.card h3{
+  margin: 10px 0;
+  color: #ffff57;
 }
